...
            onClearError = {}
        )
    }
}

object HomePageScreenTestTags {
    const val ETHEREUM_ADDRESS_FIELD = "ethereumAddressField"
    const val SEARCH_BUTTON = "searchButton"
    const val BALANCE = "balance"
    const val TRANSACTION_LIST = "transactionList"
    const val TRANSACTION = "transaction"
    const val TRANSACTION_HASH = "transactionHash"
    const val TRANSACTION_AMOUNT = "transactionAmount"
    const val TRANSACTION_DATE = "transactionDate"
    const val GAS_TRACKER = "gasTracker"
    const val LOADING = "loading"
}
